--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^9.10.0",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
+    "sqlite3": "^5.1.7",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
     "ts-node-dev": "^2.0.0",
